# clipstui

./: .gitignore  AGENTS.md  C004_pnEIj0fK1ps_2128-2134_K.mp4.clip.json  README.md  oduf25-tourney.clip  oduf25-tourney_concat.txt  pyproject.toml  pyrightconfig.json
src/clipstui/: app.py  clip_time.py  clip_utils.py  config.py  download_queue.py  exports.py  file_ops.py  fileops_apply.py  fileops_plan.py  metadata.py  parser.py  paths.py  presets.py  resolve.py  thumbs.py  timeparse.py  ytdlp_runner.py
src/clipstui/ui/: edit_buffer.py  file_browser.py  file_buffer.py  screens.py
tests/: test_cli_help.py  test_clip_time.py  test_clip_utils.py  test_config.py  test_exports.py  test_fileops_apply.py  test_fileops_plan.py  test_metadata.py  test_parser.py  test_resolve.py  test_smoke.py  test_thumbs.py  test_timeparse.py  test_ytdlp_runner.py
